--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" inial-scale="1" />
+    <meta name="viewport" content="width=device-width" />
     <title>Vacation Rentals & Unique Homes</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -98,19 +98,44 @@
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+        <div class="ideas-container">
+          <div class="forests">
+            <h3>Forest retreats</h3>
+            <img
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+            <img
+              class="invis-mobile"
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+          </div>
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+          <div class="beaches">
+            <h3>Beaches</h3>
+            <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+            <img
+              class="invis-mobile"
+              src="images/beach-house.png"
+              alt="Thinkfulbnb - Beach house"
+            />
+          </div>
+
+          <div class="rustic-cabins">
+            <h3>Rustic cabins</h3>
+            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+          </div>
+
+          <div class="pet-friendly">
+            <h3>Pet-friendly</h3>
+            <img
+              src="images/pet-friendly.png"
+              alt="Thinkfulbnb - Pet-friendly"
+            />
+          </div>
+        </div>
       </section>
 
       <!-- Host -->
